removed dependencies on apache httpcomponents, making it easier to deploy to android