@@ -1,65 +1,51 @@
 package gov.adlnet.xapi.client;
 
+import java.net.Authenticator;
+import java.net.HttpURLConnection;
+import java.net.PasswordAuthentication;
 import java.net.URI;
 import java.net.URISyntaxException;
+import java.net.URL;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.Map;
+import java.util.Map.Entry;
 import java.util.TreeMap;
 import java.nio.charset.Charset;
+
 import com.google.gson.*;
 
 import java.io.*;
-
-import org.apache.http.*;
-import org.apache.http.client.protocol.*;
-import org.apache.http.impl.auth.*;
-import org.apache.http.client.*;
-import org.apache.http.impl.client.*;
 
 import gov.adlnet.xapi.model.*;
 import gov.adlnet.xapi.model.adapters.ActorAdapter;
 import gov.adlnet.xapi.model.adapters.StatenentObjectAdapter;
 
-import org.apache.http.client.methods.*;
-import org.apache.http.auth.*;
-import org.apache.http.entity.StringEntity;
-import org.apache.http.message.BasicNameValuePair;
-import org.apache.http.client.utils.URLEncodedUtils;
-
 public class StatementClient {
-	private HttpClient _client = HttpClients.createDefault();
-	private HttpClientContext _context;
-	private HttpHost _host;
-	private ArrayList<BasicNameValuePair> filters;
+	private TreeMap<String, String> filters;
 	private Gson gson;
+	private URL _host;
 
 	public StatementClient(String uri, String user, String password)
-			throws URISyntaxException {
-		init(new URI(uri), user, password);
+			throws java.net.MalformedURLException {
+		init(new URL(uri), user, password);
 	}
 
-	public StatementClient(URI uri, String user, String password) {
+	public StatementClient(URL uri, String user, String password) {
 		init(uri, user, password);
 	}
 
-	private void init(URI uri, String user, String password) {
-		this._host = new HttpHost(uri.getHost(), uri.getPort(), uri.getScheme());
-		CredentialsProvider credsProvider = new BasicCredentialsProvider();
-		credsProvider.setCredentials(new AuthScope(this._host.getHostName(),
-				this._host.getPort()), new UsernamePasswordCredentials(user,
-				password));
+	private void init(URL uri, String user, String password) {
+		this._host = uri;
+		final String username = user;
+		final char[] pwd = password.toCharArray();
+		Authenticator.setDefault(new Authenticator() {
+			protected PasswordAuthentication getPasswordAuthentication() {
+				return new PasswordAuthentication(username, pwd);
 
-		// Create AuthCache instance
-		AuthCache authCache = new BasicAuthCache();
-		// Generate BASIC scheme object and add it to the local auth cache
-		BasicScheme basicAuth = new BasicScheme();
-		authCache.put(_host, basicAuth);
+			}
+		});
 
-		// Add AuthCache to the execution context
-		this._context = HttpClientContext.create();
-		this._context.setCredentialsProvider(credsProvider);
-		this._context.setAuthCache(authCache);
 	}
 
 	private Gson getDecoder() {
@@ -75,55 +61,54 @@ public class StatementClient {
 
 	public String publishStatement(Statement statement)
 			throws java.io.UnsupportedEncodingException, java.io.IOException {
-		HttpPost post = new HttpPost("/xapi/statements");
 		Gson gson = getDecoder();
 		String json = gson.toJson(statement);
-		post.setEntity(new StringEntity(json));
-		post.addHeader("X-Experience-API-Version", "1.0");
-		HttpResponse resp = this._client.execute(this._host, post,
-				this._context);
-		HttpEntity entity = resp.getEntity();
-		InputStreamReader in = new InputStreamReader(entity.getContent());
-		BufferedReader reader = new BufferedReader(in);
+		URL url = new URL(this._host.getProtocol(), this._host.getHost(),
+				"/xapi/statements");
+		HttpURLConnection conn = (HttpURLConnection) url.openConnection();
+		conn.setDoOutput(true);
+		conn.setDoInput(true);
+		conn.addRequestProperty("X-Experience-API-Version", "1.0");
+		conn.setRequestProperty("Content-Type",
+				"application/json; charset=utf8");
+		conn.setRequestMethod("POST");
+		OutputStreamWriter writer = new OutputStreamWriter(
+				conn.getOutputStream());
 		try {
-			StringBuilder sb = new StringBuilder();
-			String line = "";
-			while ((line = reader.readLine()) != null) {
-				sb.append(line);
-			}
-			if (resp.getStatusLine().getStatusCode() < 200
-					|| resp.getStatusLine().getStatusCode() > 205) {
-				throw new IllegalArgumentException(sb.toString());
-			} else {
-				JsonArray result = gson
-						.fromJson(sb.toString(), JsonArray.class);
-				return result.get(0).getAsString();
-			}
+			writer.write(json);
 		} finally {
-			in.close();
-			reader.close();
+			writer.close();
 		}
+
+		String result = readFromConnection(conn);
+		JsonArray jsonResult = gson.fromJson(result, JsonArray.class);
+		return jsonResult.get(0).getAsString();
 	}
 
-	private String issueRequest(String path) throws java.io.IOException {
-		HttpGet method = new HttpGet(path);
-		method.addHeader("X-Experience-API-Version", "1.0");
-		HttpResponse resp = this._client.execute(this._host, method,
-				this._context);
-		HttpEntity entity = resp.getEntity();
-		InputStreamReader in = new InputStreamReader(entity.getContent());
-		BufferedReader reader = new BufferedReader(in);
-		try {
-			StringBuilder sb = new StringBuilder();
-			String line = "";
-			while ((line = reader.readLine()) != null) {
-				sb.append(line);
-			}
-			return sb.toString();
-		} finally {
-			in.close();
-			reader.close();
+	private String readFromConnection(HttpURLConnection conn)
+			throws java.io.IOException {
+		InputStream in = new BufferedInputStream(conn.getInputStream());
+		StringBuilder sb = new StringBuilder();
+		InputStreamReader reader = new InputStreamReader(in);
+		BufferedReader br = new BufferedReader(reader);
+		String line = "";
+		while ((line = br.readLine()) != null) {
+			sb.append(line);
 		}
+		return sb.toString();
+	}
+
+	private String issueRequest(String path) throws java.io.IOException,
+			java.net.MalformedURLException {
+		URL url = new URL(this._host.getProtocol(), this._host.getHost(), path);
+		HttpURLConnection conn = (HttpURLConnection) url.openConnection();
+		conn.addRequestProperty("X-Experience-API-Version", "1.0");
+		try {
+			return readFromConnection(conn);
+		} finally {
+			conn.disconnect();
+		}
+
 	}
 
 	public StatementResult getStatements(String more)
@@ -133,15 +118,20 @@ public class StatementClient {
 	}
 
 	public StatementResult getStatements() throws java.io.IOException {
-		String baseQuery = "/xapi/statements";
+		StringBuilder query = new StringBuilder();
+		query.append("/xapi/statements");
 		if (this.filters != null && !this.filters.isEmpty()) {
-			baseQuery = baseQuery + "?"
-					+ URLEncodedUtils.format(filters, Charset.forName("utf-8"));
+			query.append("?");
+			for(Entry<String, String> item: this.filters.entrySet()){
+				query.append(item.getKey());
+				query.append("=");
+				query.append(item.getValue());
+				query.append("&");
+			}
 			this.filters.clear();
 		}
-		String result = this.issueRequest(baseQuery);
-		return this.getDecoder().fromJson(result,
-				StatementResult.class);
+		String result = this.issueRequest(query.toString());
+		return this.getDecoder().fromJson(result, StatementResult.class);
 	}
 
 	public Statement get(String statementId) throws java.io.IOException {
@@ -158,9 +148,9 @@ public class StatementClient {
 
 	private StatementClient addFilter(String key, String value) {
 		if (filters == null) {
-			filters = new ArrayList<BasicNameValuePair>();
+			filters = new TreeMap<String, String>();
 		}
-		filters.add(new BasicNameValuePair(key, value));
+		filters.put(key, value);
 		return this;
 	}
 
